Fix: add Rack attack and OpenApi specs, fix some bugs
